tests/outref/TV004.ref

select * from nonexistanttable;

INDEX fake_index "^notaglobal(""fake_index"",fields(""name""),fields(""age""),keys(""id""))";

select * from names;
[ INFO] PATH:LINENUM DATE TIME : INFO_LOADED_CONFIG : Loaded config from $PWD/octo.conf
[ INFO] PATH:LINENUM DATE TIME : INFO_RECORDING_ENV_VARS : # Recording pertinent ydb_* env var values at process startup
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_TABLE : Unknown table: NONEXISTANTTABLE
Error with syntax near (line 1, column 15):

select * from nonexistanttable;
              ^^^^^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select * from nonexistanttable;
[ INFO] PATH:LINENUM DATE TIME : INFO_PARSING_DONE : Parsing done for SQL command [select * from nonexistanttable;]
[ INFO] PATH:LINENUM DATE TIME : INFO_RETURNING_FAILURE : Returning failure from run_query
[ WARN] PATH:LINENUM DATE TIME : ERR_FEATURE_NOT_IMPLEMENTED : Feature not implemented: INDEX statements
[ INFO] PATH:LINENUM DATE TIME : INFO_PARSING_DONE : Parsing done for SQL command [INDEX fake_index "^notaglobal(""fake_index"",fields(""name""),fields(""age""),keys(""id""))";]
[ INFO] PATH:LINENUM DATE TIME : INFO_CURSOR : Generating SQL for CURSOR_NUM
[ INFO] PATH:LINENUM DATE TIME : INFO_PARSING_DONE : Parsing done for SQL command [select * from names;]
[ INFO] PATH:LINENUM DATE TIME : INFO_CURSOR : Generating SQL for CURSOR_NUM
[ INFO] PATH:LINENUM DATE TIME : INFO_M_PLAN : Generating M file [$PWD/_ydboctoP*.m] (to execute SQL query)
[DEBUG] PATH:LINENUM DATE TIME : INFO_CURPLAN : LOGICAL_PLAN BEFORE optimize_logical_plan() follows 
LP_SELECT_QUERY: 
  LP_PROJECT: 
    LP_COLUMN_LIST: 
      LP_WHERE: 
        LP_COLUMN_ALIAS: NAMES(1).ID
        LP_COLUMN_LIST_ALIAS: 
        - type: INTEGER_LITERAL
        - alias: ID
      LP_WHERE: 
        LP_COLUMN_ALIAS: NAMES(1).FIRSTNAME
        LP_COLUMN_LIST_ALIAS: 
        - type: STRING_LITERAL
        - alias: FIRSTNAME
      LP_WHERE: 
        LP_COLUMN_ALIAS: NAMES(1).LASTNAME
        LP_COLUMN_LIST_ALIAS: 
        - type: STRING_LITERAL
        - alias: LASTNAME
    LP_SELECT: 
      LP_TABLE_JOIN: 
        LP_TABLE: NAMES
      LP_CRITERIA: 
        LP_KEYS: 
        LP_SELECT_OPTIONS: 
          LP_WHERE: 
          LP_SELECT_MORE_OPTIONS: 
            LP_KEYWORDS: 
  LP_OUTPUT: 
    LP_KEY: 
    - table_name: 
    - column_name: 
    - unique_id: 3
    - method: LP_KEY_ADVANCE
    - xref_key: false
    - uses_xref_key: false

[DEBUG] PATH:LINENUM DATE TIME : INFO_CURPLAN : LOGICAL_PLAN AFTER optimize_logical_plan() follows 
LP_SELECT_QUERY: 
  LP_PROJECT: 
    LP_COLUMN_LIST: 
      LP_WHERE: 
        LP_COLUMN_ALIAS: NAMES(1).ID
        LP_COLUMN_LIST_ALIAS: 
        - type: INTEGER_LITERAL
        - alias: ID
      LP_WHERE: 
        LP_COLUMN_ALIAS: NAMES(1).FIRSTNAME
        LP_COLUMN_LIST_ALIAS: 
        - type: STRING_LITERAL
        - alias: FIRSTNAME
      LP_WHERE: 
        LP_COLUMN_ALIAS: NAMES(1).LASTNAME
        LP_COLUMN_LIST_ALIAS: 
        - type: STRING_LITERAL
        - alias: LASTNAME
    LP_SELECT: 
      LP_TABLE_JOIN: 
        LP_TABLE: NAMES
      LP_CRITERIA: 
        LP_KEYS: 
          LP_KEY: 
          - table_name: NAMES
          - column_name: ID
          - unique_id: 1
          - method: LP_KEY_ADVANCE
          - xref_key: false
          - uses_xref_key: false
        LP_SELECT_OPTIONS: 
          LP_WHERE: 
          LP_SELECT_MORE_OPTIONS: 
            LP_KEYWORDS: 
  LP_OUTPUT: 
    LP_KEY: 
    - table_name: 
    - column_name: 
    - unique_id: 3
    - method: LP_KEY_ADVANCE
    - xref_key: false
    - uses_xref_key: false

[ INFO] PATH:LINENUM DATE TIME : INFO_ENTERING_FUNCTION : Entering print_temporary_table
0|Zero|Cool
1|Acid|Burn
2|Cereal|Killer
3|Lord|Nikon
4|Joey|
5|Zero|Cool
[ INFO] PATH:LINENUM DATE TIME : INFO_PARSING_DONE : Parsing done for SQL command []
